добавил Extension Methods  для Db.BlockReference и добавил заготовку фильтрации блоков по именам в классе DynOUT

--- a/dynINOUT_2013/dynINOUT_2013.csproj
+++ b/dynINOUT_2013/dynINOUT_2013.csproj
@@ -55,6 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\dynINOUT_2017\BlockReferenceExtensionMethods.cs">
+      <Link>BlockReferenceExtensionMethods.cs</Link>
+    </Compile>
     <Compile Include="..\dynINOUT_2017\Commands.cs">
       <Link>Commands.cs</Link>
     </Compile>
