--- a/dynINOUT_2017/dynINOUT_2017.csproj
+++ b/dynINOUT_2017/dynINOUT_2017.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlockReferenceExtensionMethods.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="DynIN.cs" />
     <Compile Include="DynOUT.cs" />
