--- a/dynINOUT_2013/dynINOUT_2013.csproj
+++ b/dynINOUT_2013/dynINOUT_2013.csproj
@@ -45,14 +45,18 @@
       <HintPath>..\..\..\..\..\_SDK\Autodesk\Autocad\ObjectARX_2013\inc\AcMgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\dynINOUT_2017\BlockReferenceExtensionMethods.cs">
@@ -76,6 +80,12 @@
     <Content Include="..\dynINOUT_2017\License.txt">
       <Link>License.txt</Link>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\dynINOUT_UI\dynINOUT_UI.csproj">
+      <Project>{aa8db68c-7c11-44e0-b110-a2fae6c6987e}</Project>
+      <Name>dynINOUT_UI</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
