--- a/dynINOUT_2013/dynINOUT_2013.csproj
+++ b/dynINOUT_2013/dynINOUT_2013.csproj
@@ -59,6 +59,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\dynINOUT_2017\AddEntity.cs">
+      <Link>AddEntity.cs</Link>
+    </Compile>
     <Compile Include="..\dynINOUT_2017\BlockReferenceExtensionMethods.cs">
       <Link>BlockReferenceExtensionMethods.cs</Link>
     </Compile>
@@ -71,8 +74,14 @@
     <Compile Include="..\dynINOUT_2017\DynOUT.cs">
       <Link>DynOUT.cs</Link>
     </Compile>
+    <Compile Include="..\dynINOUT_2017\DynSET.cs">
+      <Link>DynSET.cs</Link>
+    </Compile>
     <Compile Include="..\dynINOUT_2017\Property.cs">
       <Link>Property.cs</Link>
+    </Compile>
+    <Compile Include="..\dynINOUT_2017\Setting.cs">
+      <Link>Setting.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
