--- a/dynINOUT_2017/dynINOUT_2017.csproj
+++ b/dynINOUT_2017/dynINOUT_2017.csproj
@@ -58,12 +58,15 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddEntity.cs" />
     <Compile Include="BlockReferenceExtensionMethods.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="DynIN.cs" />
     <Compile Include="DynOUT.cs" />
+    <Compile Include="DynSET.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Property.cs" />
+    <Compile Include="Setting.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md">
